travel_guam/TG-stylesheet.css
* {
    box-sizing: border-box;
}
body {
    margin: 0;
    padding: 0;
    font-family: 'Epilogue', sans-serif;
    color: white;
}
video {
    position: fixed;
    right: 0;
    top: 0;
    width: 100%;
    height: 100vh;
    object-fit: cover;
    object-position: 75% 50%;
}
/* div.overlay {
    position: fixed;
    right: 0;   
    top: 0;
    width: 100%;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.3);
    background-position: cover;
    z-index: 1;
} */
a {
    text-decoration: none;
    color: inherit;
}
a:hover {
    color: hsl(39, 86%, 80%);
}
ul {
    list-style: none;
    margin: 0;
    padding: 0;
}
button {
    background-color: transparent;
    border: none;
    color: white;
    font-family: 'Epilogue', sans-serif;
    font-size: 1.1em;
    cursor: pointer;
}
.header {
    position: relative;
    display: flex;
    justify-content: space-between;
    align-items: center;
    top: 0;
    right: 0;
    left: 0;
    z-index: 1000;
    padding: 0.3em 1em;
    background-color: rgba(0, 0, 0, 0.6);
    box-shadow: 0 3px 15px black;
}
#logo {
    display: block;
    font-family: 'Sora', sans-serif;
    margin-right: 2em;
}
#logo:hover {
    color: white;
}
#mobileNavBtn {
    -webkit-tap-highlight-color: transparent;
}
.mobile-menu {
    position: fixed;
    top: 50px;
    right: -320px;
    width: 300px;
    max-height: 75vh;
    line-height: 3em;
    background-color: rgba(33, 50, 65, 0.9);
    transition: right 400ms ease;
    overflow: scroll;
}
.hidden {
    visibility: hidden;
}
.slide-in {
    right: 0;
}
#mobileNavBtn {
    width: 35px;
    height: 35px;
    margin-right: 1em;
}
#mobileNavClose {
    display: none;
}
.login {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    padding: 1em 1em;
}
h1, h2, h3, h4 {
    margin: 0;
}
.login button {
    border: 1px solid white;
    border-radius: 1em;
    margin-left: 1em;
    padding: 0.5em 1em;
    background-color: transparent;
    color: white;
    font-family: 'Epilogue', sans-serif;
    font-size: 1.1em;
}
.login button:hover {
    color: hsl(39, 86%, 80%);
    border-color: hsl(39, 86%, 80%);
}
#downArrow {
    margin: 0 1em 0 0.3em;
    width: 13px;
    transition: transform 300ms;
}
.left-arrow {
    transform: rotateZ(90deg);
}
.mobile-accordion {
    width: 100%;
    text-align: right;
    cursor: pointer;
    border-top: 1px solid rgba(255, 255, 255, 0.3);
    -webkit-tap-highlight-color: transparent;
}
.accordion-item-border {
    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
}
.accordion-drop-btn {
    width: 100%;
    text-align: right;
    height: 45px;
    padding: 0;
}
.accordion-drop-btn:hover {
    background-color: rgba(20, 47, 71, 1);
    color: hsl(39, 86%, 80%);
}
.accordion-drop-content {
    line-height: 2em;
    text-align: left;
    display: none;
    position: relative;
    bottom: 3px;
}
.accordion-child {
    display: flex;
    align-items: center;
    height: 40px;
    vertical-align: middle;
}
.bg-blue {
    background-color: rgba(20, 47, 71, 1);
}
.yellow-text {
    color: hsl(39, 86%, 80%);
}
.accordion-child {
    width: 100%;
    padding-left: 1.7em;
}
.accordion-child:hover {
    background-color: rgba(20, 47, 71, 1);
}
#lg-menu {
    display: none;
}
#lg-submenu {
    display: none;
}
@media(min-width: 1024px) {
    .header {
        justify-content: flex-start;
    }
    #mobileNavBtn {
        display: none;
    }
    #lg-menu {
        display: block;
    }
    #lg-submenu {
        display: block;
        position: absolute;
        right: 0;
    }
    ul.nav-list {
        display: flex;
        align-items: center;
    }
    li.nav-item {
        display: inline-block;
        position: relative;
        margin: 0 1em;
    }
    li.nav-item:hover button {
        color: hsl(30, 100%, 85%);
    }
    button.nav-drop-btn {
        position: relative;
        top: 8px;
        display: flex;
        justify-content: center;
        align-items: center;
        background-color: transparent;
        border: none;
        padding: 0.5rem;
        font-family: 'Epilogue', sans-serif;
        font-size: 1em;
        color: white;
        cursor: pointer;
    }
    #downArrow {
        margin-left: 0.2em;
        width: 22px;
        bottom: 0;
        padding: 0.3rem;
        transition: transform 400ms ease;
        transform-origin: center;
    }
    li.nav-item:hover #downArrow {
        transform: rotateZ(0);
    }
    ul.dropdown-content {
        position: absolute;
        left: 0;
        top: -100em;
        background-color: rgba(20, 47, 71, 0.95);
        border-radius: 5px;
        opacity: 0;
        width: 200px;
        transition: opacity 400ms ease;
    }
    li.nav-item:hover ul.dropdown-content {
        opacity: 1;
        top: 120%;
    }
    li.drop-item {
        padding: 5% 8%;
    }
    li.drop-item:hover {
        background-color: rgba(20, 47, 71, 1);
    }
    .drop-item-hr {
        border: 1px solid rgba(255, 255, 255, 0.1);
        margin: 0;
    }
    .btn {
        border: 2px solid rgba(255, 255, 255, 0.4);
        border-radius: 10px;
        margin: 0 1rem;
        padding: 8px 16px;
        font-family: 'Epilogue', sans-serif;
        font-size: 1rem;
        color: white;
        background-color: rgba(0, 0, 0, 0.1);
        cursor: pointer;
        transition: all 300ms;
    }
    .btn:hover {
        background-color: rgba(20, 47, 71, 0.9);
    }
}

/* Showcase */
.showcase-container {
    position: relative;
    margin: 8em 1em;
    text-align: center;
}
.showcase-text {
    position: relative;
    background-color: rgba(0, 0, 0, 0.4);
    max-width: 600px;
    margin: 0 auto;
    padding: 1.3em 0;
    border-radius: 0 4.5em 0 3em;
}
.showcase-text h1 {
    font-size: 2.5em;
    margin-bottom: 0.3em;
    font-family: 'Gabriela', serif;
}
.showcase-text h2 {
    font-family: 'Petit Formal Script', cursive;
    font-size: 1.3em;
}
.subcase-content {
    position: relative;
    color: black;
}
.button-BG {
    display: inline-block;
}
#bookTripBtn {
    position: relative;
    left: 0;
    margin-top: 1em;
    background-color: rgba(0, 0, 0, 0.5);
    padding: 0.5em 1.8em;
    border: 1px solid white;
    border-radius: 1em;
    overflow: hidden;
    transition: all 400ms ease;
}
#bookTripBtn:hover {
    /* left: -10px; */
    background-color: rgba(0, 0, 0, 0);
    border: 1px solid rgba(255, 255, 255, 0);
}
#bookTripBtn::after {
    content: '>';
    opacity: 0;
    position: absolute;
    margin-left: 0;
    transition: margin-left 400ms ease;
}
#bookTripBtn:hover::after {
    opacity: 1;
    margin-left: 10px;
}




@media (min-width: 1024px) {
    .showcase-text::before {
        width: 515px;
    }
    .showcase-content span {
        display: none;
    }
}

